--- a/.project
+++ b/.project
@@ -24,7 +24,7 @@
 		<link>
 			<name>Ghidra</name>
 			<type>2</type>
-			<location>C:/Users/Admin/Desktop/SSM/midnight/Avr-pwn/ghidra_9.1.2_PUBLIC</location>
+			<location>C:/ghidra_9.1.2_PUBLIC</location>
 		</link>
 	</linkedResources>
 </projectDescription>
