--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
-name=@extname@
+name=ScrapMechanicTracer
 description=This plugin provides a trace function to log and save most lua commands from the game ScrapMechanic.
 author=HardCoded
 createdOn=11/26/2020
-version=@extversion@
+version=9.1.2
