Updated some files. And will do a release.

--- a/extension.properties
+++ b/extension.properties
@@ -2,4 +2,4 @@ name=ScrapMechanicTracer
 description=This plugin provides a trace function to log and save most lua commands from the game ScrapMechanic.
 author=HardCoded
 createdOn=11/26/2020
-version=9.1.2
+version=@extversion@
