--- a/.project
+++ b/.project
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>ScrapMechanicTracer</name>
-	<comment></comment>
+	<comment>JavaCC Nature</comment>
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>sf.eclipse.javacc.javaccbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
@@ -19,12 +24,13 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
+		<nature>sf.eclipse.javacc.javaccnature</nature>
 	</natures>
 	<linkedResources>
 		<link>
 			<name>Ghidra</name>
 			<type>2</type>
-			<location>C:/ghidra_9.1.2_PUBLIC</location>
+			<location>C:/ghidra/ghidra_9.2_PUBLIC</location>
 		</link>
 	</linkedResources>
 </projectDescription>
